<resources>
    <string name="app_name">Kashoot!</string>
    <string name="kashoot">Kashoot!</string>
    <string name="play">PLAY!</string>
    <string name="serverURL">https://35.212.157.242:8081</string>
    <string name="server_client_id">1076447558797-ets8u002mi6j1o4m2kepp2fs5h6isvh1.apps.googleusercontent.com</string>

    <string name="gameHeaderLobby">Lobby</string>
    <string name="gameHeaderEdit">Edit Room</string>
    <string name="gameHeaderQuestion">Q%1$d</string>
    <string name="gameTimer">%1$.1f</string>
    <string name="scoreboardPoints">+%1$d</string>

    <string name="editMaxPlayersTitle">Select Max Players</string>

    <string name="help_title">Powerup &amp; Score Help</string>

    <string name="fifty_fifty">Description for Fifty-fifty feature...</string>
    <string name="desc_fifty_fifty">Fifty-fifty: Removes two incorrect answers.</string>

    <string name="double_points">Description for Double Points feature...</string>
    <string name="desc_double_points">Double Points: Doubles the points received for the current question.</string>

    <string name="steal_points">Description for Steal Points feature...</string>
    <string name="desc_steal_points">Steal Points: Steal points from another player. Stolen point calculations occur after all other point calculations.</string>

    <string name="free_lunch">Description for Free Lunch feature...</string>
    <string name="desc_free_lunch">Free Lunch: Advance without answering, and obtain the minimum non-zero score obtained by opponents, or zero if no one else obtains points (there is no such thing as a free lunch).</string>

    <string name="second_life">Description for 2nd Life feature...</string>
    <string name="desc_second_life">2nd Life: Get 2 chances to answer correctly.</string>

    <string name="score_calculation_rules">"Score Calculation Rules:\n\n1. Incorrect answers yield zero points.\n2. Faster answers yield more points.\n3. Points can be modified through the use of the Double Points, Free Lunch, and Steal Points powerups."</string>

</resources>