<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_title"
            android:fontFamily="@font/quantico_bolditalic"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:lineSpacingMultiplier="0.75"
            android:layout_marginBottom="0dp"/>

        <!-- Divider -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:scaleType="fitXY"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/game_lobby_setting_divider"/>

        <!-- Fifty-fifty Feature -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_fifty_fifty"
            android:fontFamily="@font/quantico_regular"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/powerup2"
            android:contentDescription="@string/fifty_fifty"
            android:layout_marginBottom="16dp"/>

        <!-- Double Points Feature -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_double_points"
            android:fontFamily="@font/quantico_regular"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/powerup1"
            android:contentDescription="@string/double_points"
            android:layout_marginBottom="16dp"/>

        <!-- Steal Points Feature -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_steal_points"
            android:fontFamily="@font/quantico_regular"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/powerup3"
            android:contentDescription="@string/steal_points"
            android:layout_marginBottom="16dp"/>

        <!-- Free Lunch Feature -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_free_lunch"
            android:fontFamily="@font/quantico_regular"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/powerup4"
            android:contentDescription="@string/free_lunch"
            android:layout_marginBottom="16dp"/>

        <!-- 2nd Life Feature -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_second_life"
            android:fontFamily="@font/quantico_regular"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/powerup5"
            android:contentDescription="@string/second_life"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_calculation_rules"
            android:fontFamily="@font/quantico_regular"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>
</ScrollView>

